jsonrpc-types/src/snapshots/jsonrpc_types__request__tests__request_serde-2.snap
---
source: jsonrpc-types/src/request.rs
expression: "Request::new(\"method\", (), Some(1))"
---
{
  "jsonrpc": "2.0",
  "method": "method",
  "params": null,
  "id": 1
}
