jsonrpc-types/src/snapshots/jsonrpc_types__request__tests__request_serde-3.snap
---
source: jsonrpc-types/src/request.rs
expression: "Request::new(\"method\", vec![0, 1], None)"
---
{
  "jsonrpc": "2.0",
  "method": "method",
  "params": [
    0,
    1
  ],
  "id": null
}
