jsonrpc-types/src/snapshots/jsonrpc_types__request__tests__request_serde.snap
---
source: jsonrpc-types/src/request.rs
expression: "Request::new(\"method\", (), None)"
---
{
  "jsonrpc": "2.0",
  "method": "method",
  "params": null,
  "id": null
}
